# Siem-Log

./: .env.example  .gitignore  Build-NetworkMonitor-EXE.ps1  LICENSE  NetworkMonitor-Agent-Start.bat  NetworkMonitor-Start-PCAP.bat  NetworkMonitor-Start.bat  PLAN.md  README.md  Validate-SIEM.bat  pyproject.toml  requirements-build.txt  requirements-runtime.txt  run.py  run_agent.py  validate.py
config/: default_config.json
docs/: agent-server-design.md  lab-deployment.md
src/siem_agent/: __init__.py  cli.py  collector.py  discovery.py  identity.py  service.py  spool.py  transport.py  windows_events.py
src/siem_tool/: __init__.py  bluetooth_monitor.py  cli.py  collector.py  config.py  detector.py  device_monitor.py  engine.py  firewall_monitor.py  log_manager.py  models.py  network_health.py  server.py  storage.py
src/siem_tool/static/: app.js  index.html  style.css
